apps/kiali-operator/base/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kiali-operator
  labels:
    kubernetes.io/metadata.name: kiali-operator
    backstage.io/kubernetes-id: kiali-operator
    istio-injection: enabled
spec:
  finalizers:
  - kubernetes
